syntax = "proto3";

package com.pding.grpc.user_management;

option java_multiple_files = true;

import "CommonModel.proto";

message GetVideoIdsRequest {
  repeated string ids = 1;
}

message VideoSalesAndPurchaseResponseNetResponse {
  ErrorResponse error = 1;
  map<string, VideoSalesAndPurchaseNet> videoEarningsAndSales = 2;
}

message VideoSalesAndPurchaseNet {
  double treesEarned = 1;
  int64 totalSales = 2;
}

service PaymentService {
  rpc GetSalesAndPurchaseDataOfVideos(GetVideoIdsRequest) returns (VideoSalesAndPurchaseResponseNetResponse);
}